--- a/src/component/album.component.less
+++ b/src/component/album.component.less
@@ -9,6 +9,8 @@
   .album-inner-container {
     position: relative;
     overflow-y: scroll;
+    display: flex;
+    flex-wrap: wrap;
 
     .foto {
       display: block;
