--- a/src/component/album.component.css
+++ b/src/component/album.component.css
@@ -7,6 +7,8 @@
 .album-container .album-inner-container {
   position: relative;
   overflow-y: scroll;
+  display: flex;
+  flex-wrap: wrap;
 }
 .album-container .album-inner-container .foto {
   display: block;
