--- a/src/component/album/album.component.less
+++ b/src/component/album/album.component.less
@@ -11,6 +11,7 @@
     overflow-y: scroll;
     display: flex;
     flex-wrap: wrap;
+    transition: 0.5s;
 
     .foto {
       display: block;
@@ -24,3 +25,4 @@
     }
   }
 }
+
