--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,15 @@
+.night.container {
+  background: #111215;
+}
+.night.container .header .title {
+  color: #EEEDEA;
+}
+.night.container .header .album-list .album {
+  color: #EEEDEA;
+}
+.night.container .header .copyright {
+  color: #EEEDEA;
+}
 .container {
   position: fixed;
   background: #EEEDEA;
@@ -19,7 +31,7 @@
 }
 .container .header .title {
   font-size: 20px;
-  color: black;
+  color: #111215;
   cursor: pointer;
 }
 .container .header .album-list {
@@ -27,7 +39,7 @@
 }
 .container .header .album-list .album {
   font-size: 12px;
-  color: black;
+  color: #111215;
   margin-bottom: 5px;
   cursor: pointer;
 }
@@ -35,7 +47,7 @@
   position: absolute;
   bottom: calc(40px / 2);
   font-size: 12px;
-  color: black;
+  color: #111215;
 }
 .container .foto-container {
   width: 70%;
@@ -74,5 +86,9 @@
     top: 80px;
     height: calc(100% - 80px);
   }
+}
+.display.container {
+  background: #111215;
+  z-index: -1;
 }
 /*# sourceMappingURL=app.component.css.map */
