--- a/src/component/album/album.component.less
+++ b/src/component/album/album.component.less
@@ -6,23 +6,28 @@
   height: calc(~'100% - 2 * @{padding}');
   width: calc(~'100% - 2 * @{padding}');
 
+  .album-inner-container.in-rendering {
+    .foto {
+      cursor: wait;
+    }
+  }
+
   .album-inner-container {
     position: relative;
     overflow-y: scroll;
     display: flex;
     flex-wrap: wrap;
     transition: 0.5s;
+    padding: 10px;
+    box-sizing: border-box;
 
     .foto {
       display: block;
       width: 100%;
       margin: 0 0 @padding auto;
       transition: 0.5s;
-    }
-
-    .foto:last-child {
-      margin-bottom: 0;
+      cursor: pointer;
+      box-sizing: border-box;
     }
   }
 }
-
