--- a/src/component/display/display.component.html
+++ b/src/component/display/display.component.html
@@ -1,15 +1,44 @@
-<div class="full" [ngClass]="foto ? 'active' : 'inactive'" #displayContainer (click)="hide()">
-  <div class="full mask" [ngStyle]="{
-    'opacity': mask ? '0.95' : '0'
-  }"></div>
-  <div class="foto-box img-fit"
-       *ngIf="foto"
-       [ngStyle]="{
-            'background-image': foto?.rotateUrl,
-            'width': width,
-            'height': height,
-            'left': left,
-            'top': top
-       }">
+<div class="container full" [ngClass]="foto ? 'active' : 'inactive'">
+  <div class="full mask" [ngStyle]="{'opacity': opacity}"></div>
+
+  <div class="header">
+    <div class="title" [ngStyle]="{'opacity': opacity}" (click)="hide()">{{album?.name}}</div>
+<!--    <div class="menu" (click)="menu.toggleMenu()">{{menu.menuText}}</div>-->
+    <div class="meta-container" *ngIf="foto && foto.exif.data" [ngStyle]="{'opacity': maskOpacity}">
+      <div class="meta-section" *ngFor="let section of foto!.exif.data!.metaSection">
+        <div class="meta-section-title">{{section[0]}}</div>
+        <div class="meta-section-box">
+          <div class="meta-section-item" *ngFor="let item of section[1]">
+            <div class="meta-section-key">{{item[0]}}</div>
+            <div class="meta-section-value" *ngIf="!item[1].isUrl">{{item[1]}}</div>
+            <img class="meta-section-logo" alt="{{item[1].alt}}" *ngIf="item[1].isUrl" src="{{item[1].url}}">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="meta-container"
+      *ngIf="foto && foto.exif.loaded && !foto.exif.data"
+      [ngStyle]="{'opacity': maskOpacity}">
+      <div class="meta-section">
+        <div class="meta-section-title">No Exif Data</div>
+      </div>
+    </div>
+    <div class="copyright">© 2021 Jyonn Lyeu</div>
+  </div>
+
+  <div class="foto-container">
+    <div class="foto-inner-container full" #displayContainer>
+      <div class="foto-box img-fit"
+           *ngIf="foto"
+           [ngStyle]="{
+                'background-image': foto?.rotateUrl,
+                'width': width,
+                'height': height,
+                'left': left,
+                'top': top
+           }">
+      </div>
+    </div>
   </div>
 </div>
