use grid to replace flex

--- a/src/component/display/display.component.html
+++ b/src/component/display/display.component.html
@@ -32,7 +32,7 @@
       <div class="foto-box img-fit"
            *ngIf="foto"
            [ngStyle]="{
-                'background-image': foto?.rotateUrl,
+                'background-image': foto.rotateUrl,
                 'width': width,
                 'height': height,
                 'left': left,
