--- a/src/component/album/album.component.less
+++ b/src/component/album/album.component.less
@@ -15,8 +15,9 @@
   .album-inner-container {
     position: relative;
     overflow-y: scroll;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    //flex-wrap: wrap;
     transition: 0.5s;
     padding: 10px;
     box-sizing: border-box;
