- fix grid bug - album hover

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -54,6 +54,10 @@
         color: @day-text;
         margin-bottom: 5px;
         cursor: pointer;
+        transition: 0.2s;
+        &:hover {
+          font-weight: bold;
+        }
       }
     }
 
